# translation-utils

./: .gitignore  README.md  pyproject.toml  update_translations.py
src/export_translations/: export_translations.py
src/import_translations/: import_translations.py
