[tool.poetry]
name = "translations-util"
version = "0.1.0"
description = "Command line tools for extracting and importing translations from and to excel files"
authors = ["Marius Holter Berntzen <mhberntzen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
